; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vnops.c_nfs_vnop_offtoblk.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_vnops.c_nfs_vnop_offtoblk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_offtoblk_args = type { i32, i64*, i32 }
%struct.nfsmount = type { i32 }

@ENXIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_vnop_offtoblk(%struct.vnop_offtoblk_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vnop_offtoblk_args*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.nfsmount*, align 8
  store %struct.vnop_offtoblk_args* %0, %struct.vnop_offtoblk_args** %3, align 8
  %7 = load %struct.vnop_offtoblk_args*, %struct.vnop_offtoblk_args** %3, align 8
  %8 = getelementptr inbounds %struct.vnop_offtoblk_args, %struct.vnop_offtoblk_args* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.nfsmount* @VTONMP(i32 %10)
  store %struct.nfsmount* %11, %struct.nfsmount** %6, align 8
  %12 = load %struct.nfsmount*, %struct.nfsmount** %6, align 8
  %13 = call i64 @nfs_mount_gone(%struct.nfsmount* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @ENXIO, align 4
  store i32 %16, i32* %2, align 4
  br label %30

17:                                               ; preds = %1
  %18 = load %struct.nfsmount*, %struct.nfsmount** %6, align 8
  %19 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %4, align 4
  %21 = load %struct.vnop_offtoblk_args*, %struct.vnop_offtoblk_args** %3, align 8
  %22 = getelementptr inbounds %struct.vnop_offtoblk_args, %struct.vnop_offtoblk_args* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sdiv i32 %23, %24
  %26 = sext i32 %25 to i64
  %27 = load %struct.vnop_offtoblk_args*, %struct.vnop_offtoblk_args** %3, align 8
  %28 = getelementptr inbounds %struct.vnop_offtoblk_args, %struct.vnop_offtoblk_args* %27, i32 0, i32 1
  %29 = load i64*, i64** %28, align 8
  store i64 %26, i64* %29, align 8
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %17, %15
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local %struct.nfsmount* @VTONMP(i32) #1

declare dso_local i64 @nfs_mount_gone(%struct.nfsmount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
